--- a/create-admin.html
+++ b/create-admin.html
@@ -106,7 +106,9 @@
 
             try {
                 // Update this URL to match your Vercel deployment
-                const response = await fetch('https://nvm-3b.vercel.app/api/create-admin', {
+                const url = 'https://nvm-3b.vercel.app/api/create-admin';
+                console.log('Calling:', url);
+                const response = await fetch(url, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -135,7 +137,7 @@
             } catch (error) {
                 resultDiv.className = 'result error';
                 resultDiv.style.display = 'block';
-                resultDiv.innerHTML = `<strong>❌ Error:</strong> ${error.message}`;
+                resultDiv.innerHTML = `<strong>❌ Error:</strong> ${error.message}<br><br>Try waiting a few minutes for the deployment to complete, then refresh this page and try again.`;
             }
         });
     </script>
